# GLare-Engine

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/demo-game/: CMakeLists.txt
examples/demo-game/res/models/: Cabin.gltf  RockWall.gltf
examples/demo-game/res/models/Textures/: colormap_albedo000.png.import  colormap_albedo002.png.import  colormap_albedo003.png.import  colormap_albedo004.png.import  colormap_albedo005.png.import  colormap_albedo006.png.import  colormap_albedo007.png.import  colormap_albedo008.png.import  variation-a.png.import
examples/demo-game/res/shader/: building.frag  main.frag  main.vert
examples/demo-game/src/: main.cpp  managers.hpp  player.hpp  tree.hpp  uiManager.hpp
examples/lighting-demo/: CMakeLists.txt
examples/lighting-demo/src/: main.cpp
examples/model-viewer-demo/: CMakeLists.txt
examples/model-viewer-demo/src/: main.cpp
examples/physics-demo/: CMakeLists.txt
examples/physics-demo/src/: main.cpp
include/: GLare.hpp
